--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="game" class="container">
         <a href="#" id="backLink">Back</a>
         <h1 id="question"></h1>
-        <input type="text" id="answer">
+        <input type="number" id="answer">
         <br/>
         <button id="submitAnswer">Submit</button>
         <button id="newQuestion">New Question</button>
