--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="game" class="container">
         <div class="header">
             <a href="#" id="backLink">Back</a>
-            <!-- <p id="score">Score: 0/0</p> -->
+            <p id="score">Score: 0/0</p>
         </div>
         <h1 id="question"></h1>
         <input type="number" id="answer">
