--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Flashcards Game</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
