--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body style="background-color: #FFB6C1;">
+<body style="background-color: #98FB98;">
     <div class="splash-container">
         <h1>Welcome to Learning Activities 🎉</h1>
         <p>Select an activity to start:</p>
