--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Activity</title>
+    <title>Learning Activity</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body style="background-color: #98FB98;">
+<body>
     <div class="splash-container">
         <h1>Welcome to Learning Activities 🎉</h1>
         <p>Select an activity to start:</p>
