--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="splash-container">
-        <h1>Welcome to Learning Activities 🎉</h1>
+        <h1>🎉 Welcome to Learning Activities 🎉</h1>
         <p>Select an activity to start:</p>
         <div class="activity-buttons">
             <a href="math.html" class="activity-btn math-btn">✖️ Math Challenge</a>
