--- a/math.html
+++ b/math.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Activity</title>
+    <title>Math Practice</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0"></script>
@@ -14,7 +14,7 @@
         <div class="header">
             <a href="./index.html" class="backLink">Home</a>
         </div>
-        <h2>Math Challenge</h2>
+        <h2>Math Practice</h2>
         
         <label>
             Operation:
