--- a/math.html
+++ b/math.html
@@ -31,9 +31,9 @@
             <br/>
             <label class="checkboxLabel"><input type="checkbox" class="main-number" value="0"> 0 </label>
             <label class="checkboxLabel"><input type="checkbox" class="main-number" value="1"> 1 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="2"> 2 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="3"> 3 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="4"> 4 </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="2" checked> 2 </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="3" checked> 3 </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="4" checked> 4 </label>
             <label class="checkboxLabel"><input type="checkbox" class="main-number" value="5"> 5 </label>
             <label class="checkboxLabel"><input type="checkbox" class="main-number" value="6"> 6 </label>
             <label class="checkboxLabel"><input type="checkbox" class="main-number" value="7"> 7 </label>
