--- a/math.html
+++ b/math.html
@@ -19,29 +19,29 @@
         <label>
             Operation:
             <br/>
-            <label class="checkboxLabel"><input type="checkbox" class="operation" value="+" checked> +</label>
-            <label class="checkboxLabel"><input type="checkbox" class="operation" value="-"> -</label>
-            <label class="checkboxLabel"><input type="checkbox" class="operation" value="*"> x</label>
-            <label class="checkboxLabel"><input type="checkbox" class="operation" value="/"> ÷</label>
+            <label class="checkboxLabel"><input type="checkbox" class="operation" value="+" checked> <span>+</span></label>
+            <label class="checkboxLabel"><input type="checkbox" class="operation" value="-"> <span>-</span></label>
+            <label class="checkboxLabel"><input type="checkbox" class="operation" value="*"> <span>x</span></label>
+            <label class="checkboxLabel"><input type="checkbox" class="operation" value="/"> <span>÷</span></label>
         </label>
         <br><br>
 
         <label>
             Main Numbers:
             <br/>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="0"> 0 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="1"> 1 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="2" checked> 2 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="3" checked> 3 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="4" checked> 4 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="5"> 5 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="6"> 6 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="7"> 7 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="8"> 8 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="9"> 9 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="10"> 10 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="11"> 11 </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="12"> 12 </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="0"> <span>0</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="1"> <span>1</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="2" checked> <span>2</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="3" checked> <span>3</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="4" checked> <span>4</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="5"> <span>5</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="6"> <span>6</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="7"> <span>7</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="8"> <span>8</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="9"> <span>9</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="10"> <span>10</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="11"> <span>11</span> </label>
+            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="12"> <span>12</span> </label>
         </label>
         <br><br>
 
