--- a/operations.html
+++ b/operations.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="./index.html" class="backLink">Back</a>
+            <a href="./index.html" class="backLink">Home</a>
             <p id="score">Score: 0/0</p>
         </div>
         <h1 id="question"></h1>
