--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <a href="clock.html" class="activity-btn clock-btn">🕰️ Clock</a>
             <br>
             <a href="operations.html" class="activity-btn operations-btn"> < Operations</a>
+            <br>
+            <a href="fractions.html" class="activity-btn operations-btn"> 1/2 Fractions</a>
         </div>
     </div>
 
