--- a/fractions.html
+++ b/fractions.html
@@ -17,7 +17,7 @@
         <h2>Fraction Practice</h2>
         <canvas id="shapeCanvas" width="300" height="300"></canvas>
         <div class="input-section">
-            Fraction: <input type="text" id="fractionInput" placeholder="e.g. 1/2">
+            <input type="text" id="answer" placeholder="e.g. 1/2">
             <button id="submitAnswer">Submit</button>
             <button id="newQuestion">New Question</button>
         </div>
