change numbers to ranges

--- a/math.html
+++ b/math.html
@@ -27,27 +27,11 @@
         <br><br>
 
         <label>
-            Main Numbers:
+            Range of numbers:
             <br/>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="0"> <span>0</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="1"> <span>1</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="2" checked> <span>2</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="3" checked> <span>3</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="4" checked> <span>4</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="5"> <span>5</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="6"> <span>6</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="7"> <span>7</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="8"> <span>8</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="9"> <span>9</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="10"> <span>10</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="11"> <span>11</span> </label>
-            <label class="checkboxLabel"><input type="checkbox" class="main-number" value="12"> <span>12</span> </label>
-        </label>
-        <br><br>
-
-        <label>
-            Max Number:
-            <select id="maxNumber"></select>
+            <label class="checkboxLabel"><input type="radio" name="numberRange" class="main-number" value="10" checked> <span>0 - 10</span> </label>
+            <label class="checkboxLabel"><input type="radio" name="numberRange" class="main-number" value="100"> <span>0 - 100</span> </label>
+            <label class="checkboxLabel"><input type="radio" name="numberRange" class="main-number" value="1000"> <span>0 - 1000</span> </label>
         </label>
         <br><br>
 
