--- a/math.html
+++ b/math.html
@@ -49,6 +49,13 @@
         <button id="submitAnswer">Submit</button>
         <button id="newQuestion">New Question</button>
         <p id="feedback"></p>
+        <a href="#" id="logs">Logs</a>
+        <div id="logsModal" class="modal">
+            <div class="modal-content">
+                <h2>Logs</h2>
+                <p id="logsContent"></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
