--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <br>
             <a href="math.html" class="activity-btn math-btn">✖️ Math</a>
             <br>
+            <a href="fraction.html" class="activity-btn fractions-btn">Math Fraction</a>
+            <br>
             <a href="clock.html" class="activity-btn clock-btn">🕰️ Clock</a>
             <br>
             <a href="operations.html" class="activity-btn operations-btn"> < Operations</a>
