--- a/fraction.html
+++ b/fraction.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0"></script>
-    <script src="fraction.js" defer></script>
 </head>
 <body>
     <div id="settings" class="container">
         <div class="header">
-            <a href="./index.html" class="backLink">Home</a>
+            <a href="./index.html">Home</a>
         </div>
         <h2>Fraction Practice</h2>
         
@@ -60,5 +59,6 @@
             </div>
         </div>
     </div>
+    <script src="fraction.js" defer></script>
 </body>
 </html> 
